# Demireusltsn8nbotcopy

./: .env.example  .gitignore  AGENTS.md  BACKEND_AGENT_BRIEF.md  DEPLOY.md  Dockerfile  INVENTORY.md  README.md  VERCEL_DEPLOY.md  bot_tester.py  docker-compose.yml  railway.json  run_bot_tester.sh  setup.sh
.claude/: launch.json
backend/: Dockerfile  alembic.ini  pyproject.toml  railway.worker.json
backend/alembic/versions/: 0001_initial.py  0002_crm_users.py  0003_approval_summary.py  0004_translations_and_managers.py  0005_consultation_reminders.py  0006_age_field.py  0007_blacklist.py  0008_copilot.py  0008_test_leads.py  0009_consultation_notify_flags.py  0010_approval_ai_reasoning.py  0011_copilot.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  copilot.py  crm_users.py  health.py  slots.py  webhooks.py
backend/app/core/: admin_auth.py  config.py  copilot_auth.py  logging.py  rate_limit.py
backend/app/data/: copilot_kb.py
backend/app/db/: session.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: amocrm.py
backend/app/services/: amocrm.py  copilot_service.py  copilot_tools.py  crm_notify.py  google_sheets.py  inventory_client.py  openai_service.py  prompts.py  repository.py  slots.py  telegram.py
backend/app/tasks/: celery_app.py  pipeline.py  reminders.py
backend/tests/: test_slots.py
deploy/: backup_now.sh  restore.sh
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json
inventory/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json
(+144 files in other folders)
