[project]
name = "demi-results-bot"
version = "0.1.0"
description = "Production FastAPI replacement for the Demi Results n8n workflow."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.0",
  "celery[redis]>=5.6.0",
  "fastapi>=0.124.0",
  "google-auth>=2.43.0",
  "gspread>=6.2.0",
  "httpx>=0.28.0",
  "openai>=2.13.0",
  "psycopg[binary]>=3.3.0",
  "pydantic-settings>=2.12.0",
  "python-json-logger>=4.0.0",
  "python-multipart>=0.0.20",
  "redis>=5.0,<6.5",
  "sqlalchemy>=2.0.45",
  "tenacity>=9.1.0",
  "uvicorn[standard]>=0.38.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.setuptools.packages.find]
include = ["app*"]
